src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/WGLARBBufferRegion_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/WGLARBBufferRegion_StringErrorContext.class */
public final class WGLARBBufferRegion_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("wglCreateBufferRegionARB(JII)J", "net/labymod/core/laby3d/opengl/error/generated/WGLARBBufferRegionErrorContext");
        methods.put("wglDeleteBufferRegionARB(J)V", "net/labymod/core/laby3d/opengl/error/generated/WGLARBBufferRegionErrorContext");
        methods.put("wglSaveBufferRegionARB(JIIII)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBBufferRegionErrorContext");
        methods.put("wglRestoreBufferRegionARB(JIIIIII)Z", "net/labymod/core/laby3d/opengl/error/generated/WGLARBBufferRegionErrorContext");
        return methods;
    }
}
